--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,13 +17,13 @@ jobs:
           PORT: ${{ secrets.PORT }}
           KEY: ${{ secrets.SSH_KEY }}
         with:
-          source: "."
+          source: "C:\Users\mahtara\Discord Bots\Puffy-Bot"
           target: "/var/Discord/Puffy-Bot"
 
       - name: Executing remote command
         uses: appleboy/ssh-action@master
         with:
-          HOST: ${{ secrets.HOST }}
+          host: ${{ secrets.HOST }}
           USERNAME: ${{ secrets.USERNAME }}
           PORT: ${{ secrets.PORT }}
           KEY: ${{ secrets.SSH_KEY }}
