--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           port: ${{ secrets.PORT }}
-          key: ${{ secrets.SSH_KEY }}
+          key: ${{ secrets.SSHKEY }}
         with:
           source: "."
           target: "/var/Discord/Puffy-Bot"
@@ -26,5 +26,5 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           port: ${{ secrets.PORT }}
-          key: ${{ secrets.SSH_KEY }}
+          key: ${{ secrets.SSHKEY }}
           script: launcher.py
