--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,7 @@ jobs:
           HOST: ${{ secrets.HOST }}
           USERNAME: ${{ secrets.USERNAME }}
           KEY: ${{ secrets.SSHKEY }}
+          PORT: 22
         with:
           source: "."
           target: "/var/Discord/Puffy-Bot"
@@ -24,5 +25,6 @@ jobs:
         with:
           host: ${{ secrets.HOST }}
           USERNAME: ${{ secrets.USERNAME }}
+          PORT: 22
           KEY: ${{ secrets.SSHKEY }}
           script: launcher.py
