--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,24 @@
 name: Deploy
 
-on: [push]
+on:
+  push:
+    branches: [main]
 
+# a workflow  run is made up of one or more jobs that run sequentially unless told otherwise
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
+      #actions checkout is prebuilt actions
+      # checks=out your rep under $GITHUB_WORKSPACE, so our job can access it
+      - uses: actions/checkout@v2
+
+      - name: Create folder outside repo
+        run: |
+          mkdir ../Puffy-Bot
+          cp -TR ../Puff-Bot
+          tar -cvf deploy.tar ../Puffy-Bot/
 
       - name: Copy repository contents via scp
         uses: appleboy/scp-action@master
@@ -17,7 +28,7 @@ jobs:
           KEY: ${{ secrets.SSHKEY }}
           PORT: 22
         with:
-          source: "Puffy-Bot/*"
+          source: "deploy.tar"
           target: "/var/Discord/Puffy-Bot"
 
       - name: Executing remote command
