--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,12 +14,6 @@ jobs:
       # checks=out your rep under $GITHUB_WORKSPACE, so our job can access it
       - uses: actions/checkout@v2
 
-      - name: Create folder outside repo
-        run: |
-          mkdir ../Puffy-Bot
-          cp -TR ../Puff-Bot
-          tar -cvf deploy.tar ../Puffy-Bot/
-
       - name: Copy repository contents via scp
         uses: appleboy/scp-action@master
         env:
@@ -28,7 +22,7 @@ jobs:
           KEY: ${{ secrets.SSHKEY }}
           PORT: 22
         with:
-          source: "deploy.tar"
+          source: "."
           target: "/var/Discord/Puffy-Bot"
 
       - name: Executing remote command
