--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,8 +12,7 @@ jobs:
     steps:
       #actions checkout is prebuilt actions
       # checks=out your rep under $GITHUB_WORKSPACE, so our job can access it
-      - uses: actions/checkout@v2
-
+      - uses: actions/checkout@master
       - name: Copy repository contents via scp
         uses: appleboy/scp-action@master
         env:
