--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,10 +15,11 @@ jobs:
       - uses: actions/checkout@master
       - name: Copy repository contents via scp
         uses: appleboy/scp-action@master
-        with:
+        env:
           HOST: ${{ secrets.HOST }}
           USERNAME: ${{ secrets.USERNAME }}
           KEY: ${{ secrets.SSHKEY }}
+        with:
           source: "."
           target: "~/Discord"
 
@@ -28,4 +29,4 @@ jobs:
           host: ${{ secrets.HOST }}
           USERNAME: ${{ secrets.USERNAME }}
           KEY: ${{ secrets.SSHKEY }}
-          script: launcher.py
+          script: ls
