start of editing deploy.yml, need to add cron scheduler, installing pip requirements.txt, etc

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,4 +30,5 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEY }}
           run: |
-            python ./Discord/launcher.py
+            cd Discord 
+            python launcher.py
