--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,5 +30,5 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEY }}
           run: |
-            cd Discord 
-            python launcher.py
+            cd Discord/ 
+            python3 launcher.py
