got rid of ssh action, created new job that runs in correct working dir i hope

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,14 +22,8 @@ jobs:
           timeout: 300s
           source: "."
           target: "~/Discord"
-
-      - name: Executing remote command
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSHKEY }}
-          shell: bash
-          run: |
-            python3 launcher.py
-          working-directory: ./Discord
+      - name: Execute commands to start bot
+        working-directory: ./Discord
+        shell: bash
+        run: |
+          python3 launcher.py
