--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,6 @@ jobs:
           source: "."
           target: "~/Discord"
       - name: Execute commands to start bot
+        working-directory: /Discord
         run: |
           python3 launcher.py
-        working-directory: ./Discord
