--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
           timeout: 300s
           source: "."
           target: "~/Discord"
-        uses: actions/setup-python@v2
+      - uses: actions/setup-python@v2
         with:
           python-version: 3.8
       - name: Install pipenv
@@ -31,7 +31,7 @@ jobs:
           pip isntall pipenv
       - name: Install dependencies from requirements.txt
         run: |
-          pipenv install -r ~/Discord/requirements.txt 
+          pipenv install -r ~/Discord/requirements.txt
       - name: Execute commands to start bot
         run: |
           pipenv run python launcher.py
