--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install pipenv
         run: |
           python -m pip install --upgrade pip
-          pip isntall pipenv
+          pip install pipenv
       - name: Install dependencies from requirements.txt
         run: |
           pipenv install -r ~/Discord/requirements.txt
