--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pipenv
-      - name: Install dependencies from requirements.txt
+      - name: Install dependencies
         run: |
           pipenv install
       - name: Execute commands to start bot
