--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
 name: Deploy
 
 on:
-  push:
-    branches: [main]
-
+  workflow_dispatch:
+  schedule:
+    - cron: "*/3 * * * *"
 # a workflow  run is made up of one or more jobs that run sequentially unless told otherwise
 jobs:
   build:
