created workflow cron scheduler to have it run every 3 minutes

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   schedule:
     - cron: "*/3 * * * *"
-# a workflow  run is made up of one or more jobs that run sequentially unless told otherwise
+# a wforkflow  run is made up of one or more jobs that run sequentially unless told otherwise
 jobs:
   build:
     runs-on: ubuntu-latest
