--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,11 @@
 name: Deploy
 
 on:
-  push: [main]
+  push:
+    - branch: [main]
+  workflow_dispatch:
+  schedule:
+    - cron: "*/3 * * * *"
 # a wforkflow  run is made up of one or more jobs that run sequentially unless told otherwise
 jobs:
   build:
