--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy
+name: Deploy Discord Bot to DO droplet
 
 on:
   push:
@@ -7,13 +7,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       #actions checkout is prebuilt actions
       # checks=out your rep under $GITHUB_WORKSPACE, so our job can access it
       - uses: actions/checkout@master
-      - name: Copy repository contents via scp
-        uses: appleboy/scp-action@master
+      - name: Step 1 - Copy repository contents via scp
+      - uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
@@ -21,26 +20,4 @@ jobs:
           timeout: 300s
           source: "."
           target: "~/Discord"
-      - uses: actions/setup-python@v2
-        with:
-          python-version: 3.10.0
-      - name: Install pipenv
-        run: |
-          python -m pip install --upgrade pip
-          pip install pipenv
-      - name: Install dependencies
-        run: |
-          pipenv install
-      - name: Create ENV file
-        shell: bash
-        env:
-          TOKEN: ${{ secrets.TOKEN }}
-        run: |
-          touch .env
-          echo TOKEN=$TOKEN >> .env
-      - name: Execute commands to start bot
-        shell: bash
-        run: |
-          pipenv run python launcher.py
-
 #random comment to add f
