--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,9 +10,9 @@ jobs:
     steps:
       #actions checkout is prebuilt actions
       # checks=out your rep under $GITHUB_WORKSPACE, so our job can access it
-      - uses: actions/checkout@master
+        uses: actions/checkout@master
       - name: Step 1 - Copy repository contents via scp
-      - uses: appleboy/scp-action@master
+        uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
