ping.sh created to hold ping script, bot_runnersh will run in backround, creating cron job??? still working out kinks

--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,9 @@ name = "pypi"
 "discord.py" = "*"
 python-dotenv = "*"
 sanic = "*"
+flask = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.10"
+python_version = "3.8"
