--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,5 +29,13 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEY }}
-          script: /Discord/bot_runner.sh
+          script: |
+            cd /Discord
+            pipenv shell
+            pipenv run python launcher.py
+            sudo crontab -l > cron_bkp
+            */5 * * * * /Discord/ping.sh >/dev/null 2>&1 >> cron_bkp
+            sudo crontab cron_bkp
+            sudo rm cron_bkp
+
 #random comment to add f
