forgot to add botrunner bruh

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,5 +31,6 @@ jobs:
           key: ${{ secrets.SSHKEY }}
           script: |
             cd ~/Discord
+            ./bot_runner.sh
 
 #random comment to add f
