--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,15 +22,14 @@ jobs:
           timeout: 300s
           source: "."
           target: "~/Discord"
-'''
-      - name: Executing remote command
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSHKEY }}
-          script: |
-            cd ~/Discord
-            chmod +x ./bot_runner.sh
-'''
+
+      # - name: Executing remote command
+      # uses: appleboy/ssh-action@master
+      # with:
+      # host: ${{ secrets.HOST }}
+      # username: ${{ secrets.USERNAME }}
+      # key: ${{ secrets.SSHKEY }}
+      # script: |
+      # cd ~/Discord
+      # chmod +x ./bot_runner.sh
 #random comment to add f
