--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,13 +10,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
       - name: Set up python env
       - uses: actions/setup-python@v1
       - with:
         python-version: 3.8.3
       - name: install pipenv 
-        run: pip install pipenv
+        uses: dschep/install-pipenv-action@v1
       - name: run discord bot 
         run: |
           pipenv install 
