--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Set up python env
         uses: actions/setup-python@v1
         with:
-          python-version: 3.8.x
+          python-version: 3.8.13
       - name: install pipenv 
         uses: dschep/install-pipenv-action@v1
       - name: run discord bot 
