--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,13 +14,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.8.3
-      - name: install pipenv 
+      - name: install pipenv/run bot
         uses: dschep/install-pipenv-action@v1
-      - name: run discord bot 
-        run: |
-          pipenv install 
-          pipenv shell
-          pipenv run py ./testlauncher.py 
+      - run: pipenv run testlauncer.py
       
 
 
