--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
           python-version: 3.8.3
       - name: install pipenv/run bot
         uses: dschep/install-pipenv-action@v1
-      - run: pipenv run testlauncer.py
+      - run: pipenv run testlauncher.py
       
 
 
